--- a/locallytrivial/assets/css/_override.scss
+++ b/locallytrivial/assets/css/_override.scss
@@ -1,3 +1,7 @@
 .home[posts] .home-avatar img {
-    width: 16rem !important;
+    width: 25rem !important;
+}
+
+.home .home-profile .home-avatar img {
+    border-radius: 5% !important;
 }
